<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/problem"
                android:layout_width="318dp"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_weight="3"
                android:contentDescription="@string/problem"
                app:srcCompat="@drawable/p1_new" />

            <ImageView
                android:id="@+id/solution"
                android:layout_width="369dp"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:contentDescription="@string/solution"
                app:srcCompat="@drawable/p2_new" />

            <TextView
                android:id="@+id/intro"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:padding="2dp"
                android:text="@string/introduction_of_the_app"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/short_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:padding="2dp"
                android:text="@string/short_intro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/more_info"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/more_info" />

                <Button
                    android:id="@+id/experience"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/try_it_yourself" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>